<resources>
    <string name="app_name">Main App</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>

    <string name="button_dot">.</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>
    <string name="button_erase">C</string>


    <string name="success_text_view">Success</string>
    <string name="target_number_text_view">your number is %d</string>

    //questions
    <string name="first_question">Is your number 5?</string>
    <string name="second_question">Is your number 3?</string>
    <string name="third_question">Is your number 2?</string>
    <string name="fourth_question">Is your number 1?</string>
    <string name="fifth_question">Is your number 4?</string>
    <string name="sixth_question">Is your number 7?</string>
    <string name="seventh_question">Is your number 6?</string>
    <string name="eight_question">Is your number 9?</string>
    <string name="ninth_question">Is your number 8?</string>
    <string name="ten_question">Is your number 10?</string>

    <string name="reset_button_string">reset</string>
    <string name="start_button_string">start</string>

    <string name="weight_string">Enter Weight(in Kg)</string>
    <string name="height_string">Enter Height(in mtr)</string>
    <string name="str_button">calculate</string>
    <string name="str_image_desc">appropriate image according to your bmi</string>

    <string name="edit_text_string">search your word</string>
    <string name="button_text">find</string>
    <string name="todo">TODO</string>
</resources>