<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".BMI_Calculator">

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:digits="0123456789."
        android:hint="@string/weight_string"

        android:inputType="number" />
    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:digits="0123456789."
        android:hint="@string/height_string"

        android:inputType="number" />
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:text="@string/str_button"
        />
    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/text_size_twenty_five"
        android:visibility="invisible"
        tools:text="20" />

    <ImageView
        android:id="@+id/bmiImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        tools:srcCompat="@drawable/edit_text_border"
        android:contentDescription="@string/str_image_desc" />

</LinearLayout>